# bit

./: CMakeLists.txt  README.md
include/: bit.h
src/: bit.c
test/: test1.c  test2.c  test3.c  test4.c  test5.c  test6.c
